--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,400;0,500;0,900;1,400&display=swap"
+      rel="stylesheet"
+    />
     <title>JS100::01-Change Background Color</title>
 
     <link rel="stylesheet" href="css/style.css" />
@@ -12,6 +18,12 @@
     <div class="change-color-btn">
       <img src="img/paints.png" />
     </div>
+
+    <!-- made in jssecrets.com -->
+    <a class="jssecrets" href="https://jssecrets.com/"
+      >made with ❤️ at jssecrets.com</a
+    >
+    <!-- made in jssecrets.com -->
 
     <script src="js/script.js"></script>
   </body>
