add target to a link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <!-- made in jssecrets.com -->
-    <a class="jssecrets" href="https://jssecrets.com/"
+    <a class="jssecrets" href="https://jssecrets.com/" target="_blank"
       >made with ❤️ at jssecrets.com</a
     >
     <!-- made in jssecrets.com -->
